--- a/src/main/resources/templates/visitor/signUp.html
+++ b/src/main/resources/templates/visitor/signUp.html
@@ -26,18 +26,8 @@
             <input type="password" placeholder="密码" name="password"/><br>
             <input type="password" placeholder="重复密码" name="password"/><br>
             <input type="email" name="email"/><br>
-            <select name="age">
-                <option value="15">15</option>
-                <option value="16">16</option>
-                <option value="17">17</option>
-                <option value="18">18</option>
-                <option value="19">19</option>
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-                <option value="24">24</option>
-                <option value="25">25</option>
+            年龄<select name="age">
+                <option th:each="i:${#numbers.sequence(15,75,1)}" th:value="${i}" th:text="${i}"/>
             </select><br>
             <input type="hidden" th:value="${session.loginToken}" name="loginToken">
             <button type="submit">注册</button>
