commit message 7/26 瞎鸡儿乱写了一点 无进展

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,12 +5,8 @@
     <title>主页</title>
 </head>
 <body>
-
-<a href="/sessions/new">游客入口</a>
-<br>
-<a>员工入口</a>
-<br>
-<a>管理员入口</a>
-
+<center>
+<a href="/sessions/new">登录</a> <a href="/visitor/new">注册</a>
+</center>
 </body>
 </html>
