--- a/src/main/resources/templates/visitor/visitorHome.html
+++ b/src/main/resources/templates/visitor/visitorHome.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http//www.thymeleaf.org">
 <head>
     <meta charset="UTF8">
-    <title>登录成功</title>
+    <title>欢迎</title>
 </head>
 <body>
 <center>
-<h3>登录成功</h3>
+<h3>已登录</h3>
 </center>
 </body>
 </html>
