--- a/src/main/resources/templates/visitor/visitorHome.html
+++ b/src/main/resources/templates/visitor/visitorHome.html
@@ -32,6 +32,7 @@
     <h5>招聘信息</h5>
     <form action="/recruiment" method="get">
         <input type="text" placeholder="请输入查询信息" name=""/><input type="submit" text="搜索"/>
+        <input type="text" value="hehehe"/>
     </form>
 </div>
 
