--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http//www.thymeleaf.org">
 <head>
+
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+
+
     <meta charset="UTF8">
     <title>主页</title>
 </head>
 <body>
 <center>
-<a href="/sessions/new">登录</a> <a href="/visitor/new">注册</a>
+<a href="/session" class="btn btn-default" role="button">登录</a> <a href="/signUp" class="btn btn-default" role="button">注册</a>
 </center>
 </body>
 </html>
