--- a/src/main/resources/templates/login/visitorLogin.html
+++ b/src/main/resources/templates/login/visitorLogin.html
@@ -1,10 +1,15 @@
 <!DOCTYPE HTML>
         <html lang="en" xmlns:th="http//www.thymeleaf.org">
 <head>
+
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+
     <meta charset="UTF8">
     <title>游客登录</title>
 
-    <script type="text/javascript">
+    <script type="text/javascript" th:inline="javascript">
         var isCommitted = false;
         function submit(){
             if(isCommitted==false){
@@ -21,11 +26,13 @@
 <center>
     <h3>游客登录</h3><br>
 <div>
-    <form action="/sessions/create" method="post" onsubmit="return submit()">
-        <input type="text" placeholder="用户名" name="name"/><br>
-        <input type="password" placeholder="密码" name="password"/><br>
+    <form action="/session" method="post" onsubmit="return submit()">
+        <div class="form-group" style="padding-bottom: 8px;">
+        <input type="text" placeholder="用户名" name="name" id="name" class="form-control"/><br>
+        <input type="password" placeholder="密码" name="password" id="password" class="form-control"/><br>
         <input type="hidden" th:value="${session.loginToken}" name="loginToken">
-        <button type="submit">登录</button>
+        </div>
+        <button type="submit" class="btn btn-default">登录</button>
     </form>
 
     <p th:text="${#httpServletRequest.getAttribute('res')}"></p>
