--- a/src/main/resources/templates/admin/adminHome.html
+++ b/src/main/resources/templates/admin/adminHome.html
@@ -1,15 +1,13 @@
-<!DOCTYPE HTML>
-<html lang="en" xmlns:th="http//www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-    <meta charset="UTF8">
-    <title>欢迎</title>
+    <meta charset="UTF-8">
+    <title>管理员主页</title>
 </head>
 <body>
-<center>
-</center>
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -17,30 +15,22 @@
         </div>
         <div>
             <ul class="nav navbar-nav">
-                <li><a href="#">我的简历</a></li>
-                <li><a href="#">创建简历</a></li>
+                <li><a href="#">SVN</a></li>
+                <li><a href="#">员工</a></li>
+                <li><a href="#">部门</a></li>
+                <li><a href="#">出勤</a></li>
+                <li><a href="#">面试</a></li>
+                <li><a href="#">培训</a></li>
+                <li><a href="#">奖惩</a></li>
                 <li><a href="/logOut">登出</a></li>
                 <!-- 留个样本
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        Java
-                        <b class="caret"></b>
-                    </a>
                     <ul class="dropdown-menu">
-
                     </ul>
                 </li>-->
             </ul>
         </div>
     </div>
 </nav>
-
-<div>
-    <h5>招聘信息</h5>
-    <form action="/recruiment" method="get">
-        <input type="text" placeholder="请输入查询信息" name=""/><input type="submit" text="搜索"/>
-    </form>
-</div>
-
 </body>
 </html>
