--- a/src/main/resources/templates/login/visitorLogin.html
+++ b/src/main/resources/templates/login/visitorLogin.html
@@ -2,7 +2,7 @@
         <html lang="en" xmlns:th="http//www.thymeleaf.org">
 <head>
 
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
