--- a/src/main/resources/templates/visitor/visitorHome.html
+++ b/src/main/resources/templates/visitor/visitorHome.html
@@ -15,7 +15,7 @@
         </div>
         <div>
             <ul class="nav navbar-nav">
-                <li><a href="#">我的简历</a></li>
+                <li><a href="myResume">我的简历</a></li>
                 <li><a href="#">投递简历</a></li>
                 <li><a href="/logOut">登出</a></li>
                 <!-- 留个样本
