--- a/src/main/resources/templates/login/visitorLogin.html
+++ b/src/main/resources/templates/login/visitorLogin.html
@@ -30,12 +30,11 @@
         <div class="form-group" style="padding-bottom: 8px;">
         <input type="text" placeholder="用户名" name="name" id="name" class="form-control"/><br>
         <input type="password" placeholder="密码" name="password" id="password" class="form-control"/><br>
-        <input type="hidden" th:value="${session.loginToken}" name="loginToken">
+        <input type="hidden" th:value="${loginToken}" name="loginToken">
         </div>
         <button type="submit" class="btn btn-default">登录</button>
     </form>
-
-    <p th:text="${#httpServletRequest.getAttribute('res')}"></p>
+    <p th:text="${res}"></p>
 </div>
 </center>
 </body>
