commit message 7/30     搜发搜够

--- a/src/main/resources/templates/admin/ResumeList.html
+++ b/src/main/resources/templates/admin/ResumeList.html
@@ -5,15 +5,14 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
-    <title>我的简历</title>
+    <title>简历</title>
 </head>
 <body>
-<div th:include="~{/visitor/visitorHome::norm}"></div>
-<p/>
-<!--<a href="#" class="left">上一页</a>&nbsp&nbsp<a href="#" class="right">下一页</a>-->
+<div th:include="~{/admin/adminHome::navi}"></div>
+
 <div th:each="resume : ${resumes}" style="background-color: #ddeeee; width: 80%; margin: 2px; padding: auto; text-align: center; margin-left: auto; margin-right: auto">
 
-    <a th:href="@{editResume?resumeId=}+${resume.resumeId}" class="btn-toolbar">编辑</a>&nbsp<a th:href="@{deleteResume?resumeId=}+${resume.resumeId}" class="btn-danger">删除</a><br>
+    <a th:href="@{newInterview?visitorId=}+${resume.visitor.visitorId}" class="btn-toolbar">提供面试</a>
 
     <p>
         名字：<span th:text="${resume.visitor.name}"></span>
@@ -27,7 +26,6 @@
     </p>
     <p>正文：<span th:text="${resume.content}"></span></p>
 </div>
-
 
 </body>
 </html>
