--- a/src/main/resources/templates/visitor/visitorHome.html
+++ b/src/main/resources/templates/visitor/visitorHome.html
@@ -16,7 +16,8 @@
         <div>
             <ul class="nav navbar-nav">
                 <li><a href="myResume">我的简历</a></li>
-                <li><a href="#">投递简历</a></li>
+                <li><a href="createResume">投递简历</a></li>
+                <li><a href="#">我的面试</li>
                 <li><a href="/logOut">登出</a></li>
                 <!-- 留个样本
                 <li class="dropdown">
@@ -32,14 +33,14 @@
         </div>
     </div>
 </nav>
+<p/>
 
-
-<div class="input-group col-md-3" style="margin-top:0px; positon:relative">
+<div class="input-group col-md-3" style="margin-top:10px; margin-left: 25%; width: 25%; positon:relative">
     <form action="/recruitment" method="get">
     <input type="text" class="form-control" placeholder="请输入招聘关键字" name="arg"/>
         <span class="input-group-btn">
-               <button class="btn btn-info btn-search" type="submit">查找招聘</button>
-            </span>
+            <button class="btn btn-info btn-search" type="submit">查找招聘</button>
+        </span>
     </form>
 </div>
 
