commit message 7/30 留给中国的的时间不多了

--- a/src/main/resources/templates/admin/adminHome.html
+++ b/src/main/resources/templates/admin/adminHome.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">我的主页</a>
+            <a class="navbar-brand" href="/">我的主页</a>
         </div>
         <div>
             <ul class="nav navbar-nav">
@@ -19,7 +19,7 @@
                 <li><a href="#">部门</a></li>
                 <li><a href="#">出勤</a></li>
                 <li><a href="/resume">简历</a></li>
-                <li><a href="#">面试</a></li>
+                <li><a href="interviewList">面试</a></li>
                 <li><a href="#">培训</a></li>
                 <li><a href="#">奖惩</a></li>
                 <li><a href="/logOut">登出</a></li>
