--- a/src/main/resources/templates/admin/resumeList.html
+++ b/src/main/resources/templates/admin/resumeList.html
@@ -17,9 +17,9 @@
     <p>
         名字：<span th:text="${resume.visitor.name}"></span>
         &nbsp
-        <span th:text="${resume.visitor.age}"></span>岁
+        年庚：<span th:text="${resume.visitor.age}"></span>岁
         &nbsp
-        <span th:text="${resume.visitor.gender}"></span>
+        性：<span th:text="${resume.visitor.gender}"></span>
     </p>
     <p>
         目标职位：<span th:text="${resume.position}"></span>
