--- a/src/main/resources/templates/login/visitorLogin.html
+++ b/src/main/resources/templates/login/visitorLogin.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
     <meta charset="UTF8">
-    <title>游客登录</title>
+    <title>登录</title>
 
     <script type="text/javascript" th:inline="javascript">
         var isCommitted = false;
@@ -24,7 +24,7 @@
 </head>
 <body>
 <center>
-    <h3>游客登录</h3><br>
+    <h3>登录</h3><br>
 <div>
     <form action="/session" method="post" onsubmit="return submit()">
         <div class="form-group" style="padding-bottom: 8px;">
