--- a/src/main/resources/templates/visitor/visitorHome.html
+++ b/src/main/resources/templates/visitor/visitorHome.html
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="myResume">我的简历</a></li>
                 <li><a href="createResume">投递简历</a></li>
-                <li><a href="#">我的面试</li>
+                <li><a href="#">我的面试</a></li>
                 <li><a href="/logOut">登出</a></li>
                 <!-- 留个样本
                 <li class="dropdown">
