--- a/src/main/resources/templates/admin/newInterview.html
+++ b/src/main/resources/templates/admin/newInterview.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http//www.thymeleaf.org">
 <head>
+
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         $(function () {
             //开始时间：
             $('#qBeginTime').datepicker({
@@ -27,7 +28,7 @@
         })
 
 
-    </script>
+    </script>-->
     <meta charset="UTF-8">
     <title>新面试</title>
 </head>
@@ -37,7 +38,7 @@
 
 <div style="background-color: #ddeeee; width: 80%; margin: 2px; padding: auto; text-align: center; margin-left: auto; margin-right: auto">
 
-    <form action="/interview" method="post" role="form">
+    <form action="admin/interview" method="post" role="form">
         <span style="font-size:14px;"><div class="col-md-6 cy-text-right-md">
 
 	<div class="form-inline">
@@ -48,26 +49,26 @@
 
 		</div>
 
-		<div class="input-daterange input-group" id="datepicker">
+        <!--<div class="input-daterange input-group" id="datepicker">
 
-			<input type="text" class="form-control" name="start" id="qBeginTime" />
+            <input type="text" class="form-control" name="time" id="qBeginTime" />
 
-		</div>
+        </div>-->
 
-		<div class="form-group cy-mar-ver-s">
-
-			<button class="btn btn-primary cy-pad-rgt-s" onclick="javascript:doQuery();" type="button">搜索</button>
-
-		</div>
+        <div>
+            <input type="date" name="date"/>
+            <input type="time" name="time"/>
+        </div>
 
 	</div>
-
+<p><input type="text" name="interviewer" placeholder="面试官"/></p>
 </div></span>
-        <p>面试官：<input type="text" name="interviewer"/></p>
-        <input type="hidden" name="visitorId" th:value="${visitorId}"/>
+
+
         <p>
             <button type="submit" class="btn-large" id="submit">发送邀请</button>
         </p>
+        <input type="hidden" name="visitorId" th:value="${visitorId}"/>
     </form>
 
 </div>
